--- a/Sustainability-solutions.html
+++ b/Sustainability-solutions.html
@@ -65,40 +65,50 @@
     </section>
     <!-- slider-section-start  -->
     <section class="slider-section">
-        <div class="slider">
-            <div class="slide-track">
-                <div class="slide">
-                    <img src="Images/Home-page-slider-1.webp" alt="Image 1" />
+        <div class="slider client-patner">
+            <div class="owl-carousel owl-theme clients-carousel">
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo1.png">
                 </div>
-                <div class="slide">
-                    <img src="Images/Home-page-slider-2.webp" alt="Image 2" />
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo2.png">
                 </div>
-                <div class="slide">
-                    <img src="Images/Home-page-slider-1.webp" alt="Image 3" />
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo3.png">
                 </div>
-                <div class="slide">
-                    <img src="Images/Home-page-slider-2.webp" alt="Image 4" />
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo4.png">
                 </div>
-                <div class="slide">
-                    <img src="Images/Home-page-slider-1.webp" alt="Image 5" />
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo5.png">
                 </div>
-                <div class="slide">
-                    <img src="Images/Home-page-slider-2.webp" alt="Image 6" />
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo6.png">
                 </div>
-                <div class="slide">
-                    <img src="Images/Home-page-slider-1.webp" alt="Image 5" />
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo7.png">
                 </div>
-                <div class="slide">
-                    <img src="Images/Home-page-slider-2.webp" alt="Image 6" />
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo8.png">
                 </div>
-                <div class="slide">
-                    <img src="Images/Home-page-slider-1.webp" alt="Image 6" />
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo9.png">
                 </div>
-                <div class="slide">
-                    <img src="Images/Home-page-slider-2.webp" alt="Image 6" />
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo10.png">
                 </div>
-                <!-- Add more slides as needed -->
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo11.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo12.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo13.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo14.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo15.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo16.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo17.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo18.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo19.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo20.png">
+                </div>
             </div>
+        </div>
         </div>
     </section>
     <!-- slider-section-end -->
