--- a/Apollo-tech-platform.html
+++ b/Apollo-tech-platform.html
@@ -51,7 +51,7 @@
     <!-- Banner section -->
     <section class="banner-section facility-banner">
         <div class="banner-content wow bounceInUp">
-            <h1>Facility Management at your fingertips</h1>
+            <h1>All in one platform to run your facility smoothly</h1>
             <p class="mt-3 common-btn"><a href="">Enquire for Free Demo</a></p>
         </div>
         <div class="banner-image animated zoomIn">
