--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
     <!-- Banner section -->
     <section class="banner-section home-banner">
         <div class="banner-content wow bounceInUp" data-wow-delay="0.1s">
-            <h1>Comprehensive <span>360°</span> Facility & Property Management
-                Solutions</h1>
+            <h1>Consistent and Reliable Integrated Facility Management Services</h1>
             <!-- <p><span>One Partner for all your needs from</span>
                 <br>
                 technical expertise to advanced
@@ -69,49 +68,49 @@
     <!-- slider-section-start  -->
     <section class="slider-section">
         <div class="slider client-patner">
-                <div class="owl-carousel owl-theme clients-carousel">
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo1.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo2.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo3.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo4.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo5.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo6.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo7.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo8.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo9.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo10.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo11.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo12.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo13.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo14.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo15.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo16.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo17.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo18.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo19.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo20.png">
-                    </div>
+            <div class="owl-carousel owl-theme clients-carousel">
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo1.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo2.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo3.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo4.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo5.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo6.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo7.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo8.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo9.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo10.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo11.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo12.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo13.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo14.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo15.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo16.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo17.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo18.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo19.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo20.png">
                 </div>
             </div>
+        </div>
         </div>
     </section>
     <!-- slider-section-end -->
