--- a/Apollo-tech-platform.html
+++ b/Apollo-tech-platform.html
@@ -62,49 +62,49 @@
     <!-- slider-section-start  -->
     <section class="slider-section">
         <div class="slider client-patner">
-                <div class="owl-carousel owl-theme clients-carousel">
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo1.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo2.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo3.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo4.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo5.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo6.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo7.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo8.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo9.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo10.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo11.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo12.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo13.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo14.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo15.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo16.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo17.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo18.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo19.png">
-                    </div>
-                    <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo20.png">
-                    </div>
+            <div class="owl-carousel owl-theme clients-carousel">
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo1.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo2.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo3.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo4.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo5.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo6.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo7.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo8.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo9.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo10.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo11.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo12.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo13.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo14.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo15.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo16.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo17.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo18.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo19.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo20.png">
                 </div>
             </div>
+        </div>
         </div>
     </section>
     <!-- slider-section-end -->
@@ -300,10 +300,160 @@
                             <td></td>
                         </tr>
                         <tr>
+                            <td class="text-left">52 Wk PM Setup</td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Work Order Register</td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Maintenance Register</td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">AMC Setup</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">AMC Register</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Defect Register</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">WO Sent-out / In</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Maintenance Statistics</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Calibration Register</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Statutory Register</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">PM Check List</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Spare Inventory</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Shutdown Management</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
                             <td class="offer-headtile">General <span><i class="fa-solid fa-plus"></i></span></td>
                             <td></td>
                             <td></td>
                             <td></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Site Manpower</td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Key Contacts</td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Power Consumption</td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Diesel Consumption</td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Vendor Master</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">AMC Contracts</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Suggestion Register</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Reports / Export Excel</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Incident Management</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Ticket Management</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Training Management</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
+                        </tr>
+                        <tr>
+                            <td class="text-left">Documentation</td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-xmark"></i></td>
+                            <td><i class="fa-solid fa-check"></i></td>
                         </tr>
                     </tbody>
                 </table>
