--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
                                     </div>
                                     <div class="time-sub-cont">
                                         <h4>1995</h4>
-                                        <p>Lighting the way
+                                        <p>Inception of ApolloPower Systems
                                         </p>
                                     </div>
                                 </div>
@@ -202,7 +202,7 @@
                                     </div>
                                     <div class="time-sub-cont">
                                         <h4>2016</h4>
-                                        <p>
+                                        <p>Launched Apollo Facility Management Services as a separate entity
                                         </p>
                                     </div>
                                 </div>
@@ -216,7 +216,7 @@
                                     </div>
                                     <div class="time-sub-cont">
                                         <h4>2021</h4>
-                                        <p>
+                                        <p>Unveiled the Apollo Facility Management Technology Platform
                                         </p>
                                     </div>
                                 </div>
@@ -230,7 +230,8 @@
                                     </div>
                                     <div class="time-sub-cont">
                                         <h4>2022</h4>
-                                        <p>
+                                        <p>Launched operations
+                                            in Pune
                                         </p>
                                     </div>
                                 </div>
@@ -244,7 +245,8 @@
                                     </div>
                                     <div class="time-sub-cont">
                                         <h4>2023</h4>
-                                        <p>
+                                        <p>Expanded into Mumbai
+                                            and Jharkhand
                                         </p>
                                     </div>
                                 </div>
@@ -258,7 +260,8 @@
                                     </div>
                                     <div class="time-sub-cont">
                                         <h4>2024</h4>
-                                        <p>
+                                        <p>Extended our
+                                            operations to Delhi
                                         </p>
                                     </div>
                                 </div>
@@ -462,4 +465,5 @@
     <script type="text/javascript" src="./js/owl.carousel.min.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
+
 </html>
